--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 author:
   name             : "GD2024"
   avatar           : "/assets/images/logo/gd24-logo.png"
-  bio              : "The 32th International Symposium on Graph Drawing and Network Visualization will be held in Vienna, Austria from September 18-20, 2024. A pre-conference PhD school is planned for September 16-17, 2024."
+  bio              : "The 32th International Symposium on Graph Drawing and Network Visualization will be held in Vienna, Austria from September 18-20, 2024. A pre-conference PhD school will take place on September 16-17, 2024."
   location         : "Vienna, Austria"
 #  email            : ""
   links:
