--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "gd24" # "default", "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "GD2024"
+title                    : "GD 2024"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : ""
@@ -103,9 +103,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "GD2024"
+  name             : "GD 2024"
   avatar           : "/assets/images/logo/gdlogo-notext24-color-gmnd.png"
-  bio              : "The 32th International Symposium on Graph Drawing and Network Visualization will be held in Vienna, Austria from September 18-20, 2024. A pre-conference PhD school will take place on September 16-17, 2024."
+  bio              : "The 32nd International Symposium on Graph Drawing and Network Visualization will be held in Vienna, Austria from September 18-20, 2024. A pre-conference PhD school will take place on September 16-17, 2024."
   location         : "Vienna, Austria"
 #  email            : ""
   links:
