--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   links:
     - label: "Contact"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:gd24-organizer@graphdrawing.org"
+      url: "mailto:gd2024@ac.tuwien.ac.at"
     - label: "graphdrawing.org"
       icon: "fas fa-fw fa-link"
       url: "http://graphdrawing.org"
