--- a/_config.yml
+++ b/_config.yml
@@ -138,9 +138,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/graphdrawing"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      url: "https://www.facebook.com/graphdrawing.org/"
+    # - label: "Facebook"
+      # icon: "fab fa-fw fa-facebook-square"
+      # url: "https://www.facebook.com/graphdrawing.org/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
