--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,5 @@
 # main links
 main:
-  - title: "News"
-    url: /pages/news
   - title: "Call for Papers"
     url: /pages/cfp
   - title: "Committees"
@@ -10,16 +8,18 @@ main:
     url: /pages/speaker
   # - title: "Program"
   #  url: /pages/program
-  #- title: "Venue"
-  #  url: /pages/venue
-  # - title: "Registration"
-  #  url: /pages/registration
+  - title: "Venue"
+    url: /pages/venue
+  - title: "Travel"
+    url: /pages/travel_accomodation
   # - title: "Practical Information"
   #  url: /pages/practical
-  # - title: "PhD School"
-  #  url: /pages/school
   - title: "Contest"
     url: https://mozart.diei.unipg.it/gdcontest/2024/
+  - title: "PhD School"
+    url: /pages/school
+  - title: "News"
+    url: /pages/news
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
