--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,18 +2,18 @@
 main:
   - title: "Call for Papers"
     url: /pages/cfp
-  - title: "Committees"
-    url: /pages/committee
+  - title: "Program"
+    url: /pages/program
   - title: "Invited Speakers"
     url: /pages/speaker
-  # - title: "Program"
-  #  url: /pages/program
   - title: "Venue"
     url: /pages/venue
   - title: "Registration"
     url: /pages/registration
   - title: "Travel & Stay"
     url: /pages/travel_accomodation
+  - title: "Committees"
+    url: /pages/committee
   # - title: "Practical Information"
   #  url: /pages/practical
   - title: "Contest"
