--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,8 @@ main:
     url: /pages/news
   - title: "Code of Conduct"
     url: /pages/code_of_conduct
+  - title: "Info for Presenters"
+    url: /pages/presentation_info
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
