--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,25 +1,29 @@
 # main links
 main:
-  - title: "Call for Papers"
-    url: /pages/cfp
   - title: "Program"
     url: /pages/program
   - title: "Invited Speakers"
     url: /pages/speaker
   - title: "Venue"
     url: /pages/venue
-  - title: "Registration"
-    url: /pages/registration
+  - title: "PhD School"
+    url: /pages/school
   - title: "Travel & Stay"
     url: /pages/travel_accomodation
+  - title: "Registration"
+    url: /pages/registration
+  - title: "Call for Papers"
+    url: /pages/cfp
   - title: "Committees"
     url: /pages/committee
   # - title: "Practical Information"
   #  url: /pages/practical
   - title: "Contest"
     url: https://mozart.diei.unipg.it/gdcontest/2024/
-  - title: "PhD School"
-    url: /pages/school
+  - title: "Software Exhibition"
+    url: /pages/software_session
+  - title: "Accepted Papers"
+    url: /pages/accepted_papers
   - title: "News"
     url: /pages/news
   - title: "Code of Conduct"
